# dataxlr8-email-mcp

./: .env.example  Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs  tests.rs
src/tools/: mod.rs
